--- a/.github/workflows/spotify-clone.yml
+++ b/.github/workflows/spotify-clone.yml
@@ -45,7 +45,7 @@ jobs:
       run: npm audit --audit-level=high || true
 
     - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build frontend image
       run: docker build -t $FRONTEND_IMAGE ./frontend
