--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=5000
-      - MONGODB_URI=mongodb+srv://yprales:R0PDIk9zo2KyfVgI@cluster0.sdubnmz.mongodb.net/spotify_db?retryWrites=true&w=majority&appName=Cluster0
+      - MONGODB_URI=
 
 
   frontend:
